Updates from Overleaf

--- a/refs.bib
+++ b/refs.bib
@@ -66,13 +66,7 @@
 @article{,
    title = {The-rise-of-inequality-research-can-spanning-disciplines-help-tackle-injusticeNature},
 }
-@report{,
-   author = {Marco A Villagrana},
-   isbn = {12.46111,160},
-   keywords = {2019,Cover Date:  February 19},
-   title = {Medicare Graduate Medical Education Payments: An Overview},
-   url = {www.crs.gov|7-5700},
-}
+
 @article{Fenwick2022,
    abstract = {This article reports on baseline data gathered as part of an intervention project which aims to enhance academic performance, encourage retention and broaden the educational and career aspirations of senior cycle students in schools which serve socio-economically disadvantaged communities. The experiences and perceptions of 405 students attending 16 DEIS (Delivering Equality of Opportunity in Schools) schools who are participating in a voluntary after-school tuition programme are reported. Specifically, the article provides a demographic profile of the students in relation to familial education levels and parental occupations; explores whether the students had previously considered leaving school and what specific factors influenced their retention; and reports on the results of two standardised questionnaires, measuring perceived self-efficacy and sense of school belonging. Findings indicate that students reported an overall low level of self-efficacy but a positive sense of belonging in schools, with no differences reported across gender. Differences were observed, however, between those who had considered early school leaving and those who had not, with the former cohort recording lower self-efficacy and sense of belonging scores. This article presents an important, and possibly the first, profile of senior cycle students from DEIS schools who have demonstrated academic resilience in terms of school retention, career ambition, and availing of additional support in their schools through this intervention project.},
    author = {Amalia Fenwick and Billy Kinsella and Judith Harford},
@@ -146,27 +140,7 @@
    volume = {27},
    year = {2022},
 }
-@article{,
-   abstract = {This study presents findings from testing an innovative student-centred drama-based teaching methodology for science, technology, engineering and mathematics (STEM) disciplines for secondary school students. The method, based on performances, was tested in two case studies, Spain and the UK, on a sample of 2089 students. These performances have been shown to be an effective way of generating a two-way dialogue between students and researchers and prompting student reflections about researchers as role models, gender inequalities in science and ethical issues in STEM careers and scientific research. Furthermore, they have enhanced young people’s positive attitudes and interest in science, scientists and scientific careers and have debunked science-related stereotypes. This indicates that the performances evaluated in this study are supporting the aspirations of young people, but not limiting their inclination to critically assess the relative benefits and risks of scientific development for themselves.},
-   author = {Sergio Villanueva Baselga and Oriol Marimon Garrido and Helena González Burón},
-   doi = {10.1007/s11165-020-09939-5},
-   issn = {15731898},
-   issue = {1},
-   journal = {Research in Science Education},
-   keywords = {Drama-based education,Responsible research and innovation,Science education,Scientific vocations,Student-centred pedagogy},
-   month = {2},
-   pages = {173-190},
-   publisher = {Springer Science and Business Media B.V.},
-   title = {Drama-Based Activities for STEM Education: Encouraging Scientific Aspirations and Debunking Stereotypes in Secondary School Students in Spain and the UK},
-   volume = {52},
-   year = {2022},
-}
-@book{,
-   isbn = {9788799972340},
-   publisher = {Trykværket},
-   title = {Vejledning - valg og læring},
-   year = {2018},
-}
+
 @article{Consiglio2022,
    abstract = {While providing equal opportunities to all members of society independent of an individual’s socio-economic background is a major objective of German policy makers, educational opportunities of children with a non-academic family background are still unequally obstructed. When analysing the labour market implications of this disadvantage, social capital as an additional source of inequality often lacks attention. Drawing on the instrumental value of rather loose contacts (i.e. weak ties) on the labour market as revealed by Granovetter (Getting a job. A study of contacts and careers, The University of Chicago Press, Cambridge, 1974), this paper goes beyond the human capital approach and includes a measure of instrumental social capital in the form of weak-tie career support in the earnings function. Applying an Oaxaca-Blinder decomposition and quantile regressions, we find a significant average wage gap between those with and without an academic family background. A large part can be explained by deficits that those from less educated families incur with respect to human and instrumental social capital: Lower educational attainment accounts for more than half of the wage gap between the two groups while fewer career support explains around five percent of the differential. Additionally, a non-academic family background is associated with a significant deficit in returns to their instrumental social capital along the wage distribution. The findings therefore suggest that inequalities of opportunity on the German labour market occur beyond the education system, as not only the quantity but also the quality of career supporting networks of those from a non-academic family are inferior.},
    author = {Valentina S. Consiglio and Denisa M. Sologon},
@@ -1012,17 +986,9 @@
    volume = {40},
    year = {2020},
 }
-@report{,
-   abstract = {Toma de muestra de suelo No olvides registrar todos los datos: los estudiantes SWI recogen muestras en otras regiones del globo, a veces muy remotas, mientras tú lo haces en tu tierra. La riqueza del proyecto SWI consiste en la recopilación de muestras a una escala y con una diversidad que nunca se ha logrado antes. Recuerda documentar rigurosamente la toma de muestra. Sin información sobre su origen perderá su valor. Codificación SWI España ha acordado una codificación común, en la que P hace relación a la provincia, p.e. V=Valencia; XXX es el centro (código de tres letras que te proporcionarán los SWITA); YY es el número de tu pareja de prácticas. p.e. (la muestra de la pareja 03 del IES Sorolla se llamaría V-SOR-03). Bolsa hermética con material estéril para la recogida de muestra (izquierda), muestra en tubo estéril de 15 mL para análisis microbiológico (centro) y en bote de 100 mL para análisis edafológico (derecha). No olvides rotular de manera clara y en mayúsculas ambos recipientes. Disponemos de dos maneras para realizar el registro. Hoja de registro La primera es la clásica, que consiste en anotar en la hoja de formulario que os proporcionamos junto con la bolsa de recogida de muestras. Usad letras mayúsculas y devolvedla rellenada completamente junto con los botes. Rellenad todos los campos que solicita la hoja. Las coordenadas GPS en formato GD (grados decimales) (p.e. 39.5096699,-0.4135963). Para obtener datos adicionales (Temperatura) os recomendamos la aplicación Thermometer++ (Google Play).},
-   title = {SWI@VAL: Implantación en la Comunidad Valenciana de la Small World Initiative Formulario de toma de muestras},
-   url = {http://www.uv.es/swi/swi.apk},
-}
-@report{,
-   author = {Ai Editor Ela Tarakcı and Ahmet Akgül and Banu Kumbasar and Burcu Ersöz Hüseyinsinoğlu and Esra Akı and Neslihan Keser Özcan and Taner Artan and Zahra Polat and İbrahim Kara General Manager Ali Şahin and İrem Soysal Gökhan Çimen Editor Bahar Albayrak and Arzu Arı Deniz Kaya Irmak Berberoğlu Alara Ergin Hira Gizem Fidan Vuslat Taş İrem Özmen},
-   title = {Archives of Health Science and Research Section Editors Gerontology Healthcare Management Physiotherapy and Rehabilitation Social Work},
-}
+
 @article{Piatkowski2020,
-   abstract = {Technological revolution brings forth major changes in the labour market as well as the necessity to adapt to the shifting conditions on the part of both employees and entrepreneurs. This notion fits in with the European Policy of "Lifelong Learning" which presents the necessity to constantly improve skills and participate in the process of learning through the entire period of professional engagement. The aim of the article is to diagnose the current situation in the labour market and expectations towards employees as a result of the technological revolution and digitization, and to analyze whether there are groups of countries in the EU with similar features describing the labour market and to present the differences between these groups. The study uses research methods based on literature research, content analysis and comparative analysis, and the empirical part uses cluster analysis-the Ward method, using secondary statistical data from the Eurostat database. It was verified which groups of the Member States exhibited similarities to the extent of: forms of employment; work productivity; commitment of entrepreneurs and employees to the process of continuing vocational training (CVT) and lifelong learning; educating future employees of the economy at the level of higher education (HE) in STEM fields and development of digital skills as well as commitment of governments of each EU Member State to financing research and development in higher education institutions (HEIs). It may be ascertained that the average values of variables describing the pattern followed by "new" Member States which joined the EU in 2004 or later are, in majority, lower than the values of the same variables describing the pattern followed by the "old" Member States. It cannot be unambiguously stated that the affiliation with the Eurozone in any way determined whether a given group of Member States is better or worse than the other. The resulting figures may become significant at the stage of developing the employment policy as well as the education policy and the professional career development policy in the respective Member States. Those results may be applied to both evaluation and planning of actions to be taken against the background of the development strategy in order to reduce clearly visible inequalities between the European Union Member States.},
+   abstract = {Technological revolution brings forth major changes in the labor market as well as the necessity to adapt to the shifting conditions on the part of both employees and entrepreneurs. This notion fits in with the European Policy of "Lifelong Learning" which presents the necessity to constantly improve skills and participate in the process of learning through the entire period of professional engagement. The aim of the article is to diagnose the current situation in the labor market and expectations towards employees as a result of the technological revolution and digitization, and to analyze whether there are groups of countries in the EU with similar features describing the labor market and to present the differences between these groups. The study uses research methods based on literature research, content analysis, and comparative analysis, and the empirical part uses cluster analysis-the Ward method, using secondary statistical data from the Eurostat database. It was verified which groups of the Member States exhibited similarities to the extent of: forms of employment; work productivity; commitment of entrepreneurs and employees to the process of continuing vocational training (CVT) and lifelong learning; educating future employees of the economy at the level of higher education (HE) in STEM fields and development of digital skills as well as the commitment of governments of each EU Member State to financing research and development in higher education institutions (HEIs). It may be ascertained that the average values of variables describing the pattern followed by "new" Member States which joined the EU in 2004 or later are, in the majority, lower than the values of the same variables describing the pattern followed by the "old" Member States. It cannot be unambiguously stated that the affiliation with the Eurozone in any way determined whether a given group of Member States is better or worse than the other. The resulting figures may become significant at the stage of developing the employment policy as well as the education policy and the professional career development policy in the respective Member States. Those results may be applied to both evaluation and planning of actions to be taken against the background of the development strategy in order to reduce clearly visible inequalities between the European Union Member States.},
    author = {Marcin J. Piatkowski},
    doi = {10.3390/su12135437},
    issn = {20711050},
@@ -1144,14 +1110,7 @@
    volume = {31},
    year = {2020},
 }
-@report{,
-   author = {Luis Lugo and Alan Cooperman and Cary Funk and Gregory A Smith and Senior Researchers and Erin O'connell and Sandra Stencel},
-   title = {"Nones" on the Rise: One-in-Five Adults Have No Religious Affiliation FOR FURTHER INFORMATION CONTACT},
-   url = {www.pewforum.org},
-}
-@article{,
-   title = {Does-School-Education-Balance-out-Social-Differences--Gleicht-Schulbildung-soziale-Unterschiede-aus-Leistungsunterschiede-in-der-Kindheit-nach-soziokonomischem-HintergrundWirtschaftsdienst},
-}
+
 @article{Stewart2003,
    author = {Emma Stewart},
    issn = {1020-7473},
@@ -1189,24 +1148,7 @@
    volume = {25},
    year = {2020},
 }
-@article{,
-   abstract = {Purpose: Privilege is often silent, invisible and not made explicit, and silence is a key question for theorizing on organizations. This paper examines interrelations between privilege and silence for relatively privileged professionals in high-intensity knowledge businesses (KIBs). Design/methodology/approach: This paper draws on 112 interviews in two rounds of interviews using the collaborative interactive action research method. The analysis focuses on processes of recruitment, careers and negotiation of boundaries between work and nonwork in these KIBs. The authors study how relative privilege within social inequalities connects with silences in multiple ways, and how the invisibility of privilege operates at different levels: individual identities and interpersonal actions of privilege (micro), as organizational level phenomena (meso) or as societally constructed (macro). Findings: At each level, privilege is reproduced in part through silence. The authors also examine how processes connecting silence, privilege and social inequalities operate differently in relation to both disadvantage and the disadvantaged, and privilege and the privileged. Originality/value: This study is relevant for organization studies, especially in the kinds of “multi-privileged” contexts where inequalities, disadvantages and subordination may remain hidden and silenced, and, thus, are continuously reproduced.},
-   author = {Charlotta Niemistö and Jeff Hearn and Mira Karjalainen and Annamari Tuori},
-   doi = {10.1108/QROM-06-2019-1775},
-   issn = {17465656},
-   issue = {4},
-   journal = {Qualitative Research in Organizations and Management: An International Journal},
-   keywords = {Careers,Knowledge professionals,Knowledge-intensive businesses,Privilege,Silence,Work/nonwork boundaries},
-   month = {10},
-   pages = {503-522},
-   publisher = {Emerald Group Holdings Ltd.},
-   title = {Interrogating silent privileges across the work–life boundaries and careers of high-intensity knowledge professionals},
-   volume = {15},
-   year = {2020},
-}
-@article{,
-   title = {Equality-and-diversity-efforts-do-not-burden-research--no-matter-what-the-UK-government-saysNature},
-}
+
 @article{Ball2019,
    abstract = {There is a strong push to increase American students’ interest in Science, Technology, Engineering, and Mathematic (STEM) careers. However, minority and female students remain underrepresented in the STEM fields. Therefore, it is essential that we continue to examine the potential factors that both incite and dissuade STEM interest. We apply Expectancy-Value Theory (EVT) to examine STEM attitudes of predominantly low-socioeconomic status minority elementary school students over the course of a computing intervention. Furthermore, we integrate the digital inequality mental access conceptualization of ‘emotional costs’ into the EVT model in order to predict students’ negative STEM attitudes. Data are from a large-scale computing intervention that took place in a primarily minority, high poverty, urban elementary school district located in the southeastern USA. Results indicate that positive expectancies for success and subjective task values predict students’ positive STEM attitudes. Emotional costs toward technology primarily predict negative STEM attitudes. Students’ expectancies/values and emotional costs may have a ‘push-and-pull’ effect on the formation of STEM attitudes. This study successfully links digital disparities to STEM disparities by integrating the digital inequality concept of emotional costs. Practically, we conclude that future computing interventions should increase students’ academic-related expectancies and values while also minimizing their emotional costs in order to address both digital and STEM inequalities. Theoretically, we conclude that broad conceptualizations of emotional costs should be included in future studies to help explain negative attitudes/motivations toward STEM-related topics.},
    author = {Christopher Ball and Kuo Ting Huang and R. V. Rikard and Shelia R. Cotten},
@@ -1309,6 +1251,80 @@
    volume = {31},
    year = {2019},
 }
-@article{,
-   title = {Research-culture-must-be-kinder-for-all-not-just-royaltyNature},
+
+@article{Gaiaschi2021347,
+	author = {Gaiaschi, Camilla},
+	title = {University and culture of excellence. More meritocratic for whom? Gender aporias in the Italian academia; [Università e cultura dell’eccellenza. Più meritocratica per chi? Aporie di genere nell’accademia italiana]},
+	year = {2021},
+	journal = {Etnografia e Ricerca Qualitativa},
+	number = {2},
+	pages = {347 – 371},
+	doi = {10.3240/101575},
+	url = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-85122202440&doi=10.3240\%2f101575&partnerID=40&md5=ed6f0e9ad9618378730d6da8423b0590},
+	type = {Article},
+	publication_stage = {Final},
+	source = {Scopus},
+	note = {Cited by: 0}
 }
+
+@article{https://doi.org/10.1002/j.2161-0045.2012.00006.x,
+author = {Dispenza, Franco and Watson, Laurel B. and Chung, Y. Barry and Brack, Greg},
+title = {Experience of Career-Related Discrimination for Female-to-Male Transgender Persons: A Qualitative Study},
+journal = {The Career Development Quarterly},
+volume = {60},
+number = {1},
+pages = {65-81},
+keywords = {female-to-male, transgender, career, discrimination, qualitative},
+doi = {https://doi.org/10.1002/j.2161-0045.2012.00006.x},
+url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/j.2161-0045.2012.00006.x},
+eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/j.2161-0045.2012.00006.x},
+abstract = {In this qualitative study, the authors examined the experience of discrimination and its relationship to the career development trajectory of 9 female-to-male transgender persons. Participants were between 21 and 48 years old and had a variety of vocational experiences. Individual semistructured interviews were conducted via telephone and analyzed using grounded theory methodology. The emergent model consisted of forms of discrimination and impact of discrimination. These components intersected with the career development trajectory. Participants provided their own suggestions for improving the workplace environment. Counseling, advocacy, and future research implications are discussed.},
+year = {2012}
+}
+
+@article{https://doi.org/10.1111/gwao.12549,
+author = {Bourabain, Dounia},
+title = {Everyday sexism and racism in the ivory tower: The experiences of early career researchers on the intersection of gender and ethnicity in the academic workplace},
+journal = {Gender, Work \& Organization},
+volume = {28},
+number = {1},
+pages = {248-267},
+keywords = {early career researchers, everyday racism, everyday sexism, higher education institutions, inequality, intersectionality},
+doi = {https://doi.org/10.1111/gwao.12549},
+url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/gwao.12549},
+eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/gwao.12549},
+abstract = {Abstract The academic workplace is often described as a place of merit and equal opportunities. However, research shows a leaky pipeline where the share of women and people of color decreases in the higher echelons of academia. Explanations are often structural, referring to the access barriers women are confronted with, such as hiring and recruitment. This research investigates what goes wrong in the early phases of a female academic's career. From an intersectional perspective, I study the experiences with everyday sexism and racism of PhD and postdoctoral researchers across disciplines. After conducting 50 in-depth interviews, four processes are discovered: smokescreen of equality, everyday cloning, patronization, and paternalism.},
+year = {2021}
+}
+
+@article{nguyen2022black,
+  title={Black Lives Matter: Moving from passion to action in academic medical institutions},
+  author={Nguyen, Bich-May and Guh, Jessica and Freeman, Brandi},
+  journal={Journal of the National Medical Association},
+  volume={114},
+  number={2},
+  pages={193--198},
+  year={2022},
+  publisher={Elsevier}
+}
+
+@article{joanpere2022history,
+  title={History of MeToo University movement in Spain},
+  author={Joanpere, Mar and Burgues-Freitas, Ana and Soler, Marta and Aiello, Emilia},
+  journal={Social and Education History},
+  volume={11},
+  number={2},
+  year={2022}
+}
+
+@article{shor2015paper,
+  title={A paper ceiling: Explaining the persistent underrepresentation of women in printed news},
+  author={Shor, Eran and Van De Rijt, Arnout and Miltsov, Alex and Kulkarni, Vivek and Skiena, Steven},
+  journal={American Sociological Review},
+  volume={80},
+  number={5},
+  pages={960--984},
+  year={2015},
+  publisher={Sage Publications Sage CA: Los Angeles, CA}
+}
+
